--- a/pyVerein/members/templates/members/member/list.html
+++ b/pyVerein/members/templates/members/member/list.html
@@ -18,17 +18,58 @@
 
 {% block content %}
     <table id="memberslist" class="mdl-data-table dataTable"
-            cellspacing="0"
-            width="100%">
+        cellspacing="0"
+        width="100%">
         <thead>
             <tr>
-                <th>{% trans 'Lastname' %}</th>
-                <th>{% trans 'Firstname' %}</th>
-                <th>{% trans 'Street' %}</th>
-                <th>{% trans 'Zip-Code' %}</th>
-                <th>{% trans 'City' %}</th>
+                {% if perms.members.view_field_last_name %}
+                    <th class="mdl-data-table__cell--non-numeric">{% trans 'Lastname' %}</th>
+                {% endif %}
+                {% if perms.members.view_field_first_name %}
+                    <th class="mdl-data-table__cell--non-numeric">{% trans 'Firstname' %}</th>
+                {% endif %}
+                {% if perms.members.view_field_street %}
+                    <th class="mdl-data-table__cell--non-numeric">{% trans 'Street' %}</th>
+                {% endif %}
+                {% if perms.members.view_field_zipcode %}
+                    <th class="mdl-data-table__cell--non-numeric">{% trans 'Zip-Code' %}</th>
+                {% endif %}
+                {% if perms.members.view_field_city %}
+                    <th class="mdl-data-table__cell--non-numeric">{% trans 'City' %}</th>
+                {% endif %}
             </tr>
         </thead>
+        <tbody>
+            {% for member in members %}
+                <tr data-member="{% url 'members:detail' pk=member.pk %}">
+                    {% if perms.members.view_field_last_name %}
+                        <td class="mdl-data-table__cell--non-numeric">
+                            {{ member.last_name}}
+                        </td>
+                    {% endif %}
+                    {% if perms.members.view_field_first_name %}
+                        <td class="mdl-data-table__cell--non-numeric">
+                            {{ member.first_name }}
+                        </td>
+                    {% endif %}
+                    {% if perms.members.view_field_street %}
+                        <td class="mdl-data-table__cell--non-numeric">
+                            {{ member.street }}
+                        </td>
+                    {% endif %}
+                    {% if perms.members.view_field_zipcode %}
+                        <td class="mdl-data-table__cell--non-numeric">
+                            {{ member.zipcode }}
+                        </td>
+                    {% endif %}
+                    {% if perms.members.view_field_city %}
+                        <td class="mdl-data-table__cell--non-numeric">
+                            {{ member.city }}
+                        </td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
     <a href ="{% url 'members:create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
@@ -44,8 +85,7 @@
                 $('#memberslist').css('opacity', processing ? '0.3' : '1.0');
             }).DataTable({
                 "processing": true,
-                "serverSide": true,
-                "ajax": "{% url 'members:apiList' %}",
+                "serverSide": false,
                 "language": {
                     "sProcessing": "<i class='fa fa-spin fa-spinner fa-3x'></i>",
                     "sEmptyTable": "{% trans 'sEmptyTable' %}",
@@ -67,37 +107,6 @@
                         "sSortDescending": "{% trans 'sSortDescending' %}"
                     }
                 },
-                "processing":
-                    true,
-                "columns":
-                    [
-                        {
-                            "data": "last_name",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                        {
-                            "data": "first_name",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                        {
-                            "data": "street",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                        {
-                            "data": "zipcode",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        },
-                        {
-                            "data": "city",
-                            "className": "mdl-data-table__cell--non-numeric"
-                        }
-                    ],
-                "createdRow":
-                    function (row, data, index) {
-                        $(row).click(function () {
-                            window.open(data.detail_url);
-                        });
-                    }
             });
             // Search
             $("#memberslist_filter").html('<div class="mdc-text-field"><input type="text" id="datatable-search" class="mdc-text-field__input"><label class="mdc-floating-label" for="datatable-search">{% trans 'sSearch' %}</label><div class="mdc-line-ripple"></div></div>');
@@ -110,6 +119,9 @@
             $(".mdc-select select").addClass("mdc-select__native-control");
             $('#memberslist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
+            });
+            $('tbody tr').click(function () {
+                window.open($(this).data('member'));
             });
         })
         ;
