--- a/material.io/sass/colors.scss
+++ b/material.io/sass/colors.scss
@@ -3,3 +3,5 @@ $mdc-theme-secondary: #2979FF;
 $mdc-theme-on-primary: #FAFAFA;
 $mdc-theme-on-secondary: #FAFAFA;
 $mdc-typography-font-family: Abel, sans-serif;
+$mdc-theme-background: #FFFFFF;
+$link: #D50000;
