Added page load waiter

--- a/pyVerein/app/templates/app/_attributions.html
+++ b/pyVerein/app/templates/app/_attributions.html
@@ -84,6 +84,20 @@
                 </p>
                 <p>
                     <h4>
+                        Pleasewait.js
+                    </h4>
+                    <span class="mdc-typography--overline">PleasWait.js</span> {% trans 'by' %} Pathgether<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="http://pathgather.github.io/please-wait/" title="{% trans 'Open at' %} github.io" target="_blank">github.io</a>
+                </p>
+                <p>
+                    <h4>
+                        SpinKit
+                    </h4>
+                    <span class="mdc-typography--overline">SpinKit</span> {% trans 'by' %} Tobias Ahlin<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="http://tobiasahlin.com/spinkit/" title="{% trans 'Open at' %} tobiasahlin.com" target="_blank">tobiasahlin.com</a>
+                </p>
+                <p>
+                    <h4>
                         Standard Avatar-Image
                     </h4>
                     <span class="mdc-typography--overline">Free avatars flat icons</span> {% trans 'by' %} Dmitriy Bondarchuk<br />
