--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -2,6 +2,7 @@
 
 html {
     height: 100%;
+    overflow-y: scroll;
 }
 
 body{
@@ -10,8 +11,16 @@ body{
     padding-top: 0.1px;
     height: 100%;
     font-size: 16px;
-}
 
+    .inner{
+        width: 100%;
+        height: auto;
+        display: none;
+    }
+}
+body.pg-loaded .inner{
+    display: inherit;
+}
 a {
     color: $link;
 }
