--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -1,5 +1,6 @@
 html {
-  height: 100%; }
+  height: 100%;
+  overflow-y: scroll; }
 
 body {
   display: flex;
@@ -7,6 +8,13 @@ body {
   padding-top: 0.1px;
   height: 100%;
   font-size: 16px; }
+  body .inner {
+    width: 100%;
+    height: auto;
+    display: none; }
+
+body.pg-loaded .inner {
+  display: inherit; }
 
 a {
   color: #D50000; }
